2004-11-19  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.8), configure.in (1.13.2.6): autoconf now
	  detects if libgcc is built shared, in which case LIBS needs
	  -lgcc_s.  Without it, the nsd binary will fail to link because of
	  unresolved symbols __umoddi3 and __udivdi3 in nsd/dsprintf.c.

2004-11-19  Dossy Shiobara <dossy@panoptic.com>

	* nsd/Makefile (1.39.2.2): Adding -lz to LIBS is now redundant.

2004-11-19  Dossy Shiobara <dossy@panoptic.com>

	* include/nsthread.h (1.24.2.4): Need to include <inttypes.h> on
	  some platforms (OS X, Solaris 10) to get C99 "uint32_t" and other
	  types.  Backport from HEAD.

2004-11-19  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.7), configure.in (1.13.2.5),
	  include/Makefile.global.in (1.16.2.1), nsd/compress.c (1.1.2.2):
	  Add --with-zlib configure option (on by default) and add ifdef's
	  to nsd/compress.c.  Backport from HEAD.

2004-11-17  Dossy Shiobara <dossy@panoptic.com>

	* nsd/adprequest.c (1.16.2.1): Don't send Content-Length if
	  streaming is on.  Backport from HEAD.

2004-11-15  Dossy Shiobara <dossy@panoptic.com>

	* nsd/nsmain.c (1.52.2.3): AOLserver will now allow setting the fd
	  limit (via "ulimit -Hn", etc.) and only log a warning if it
	  exceeds FD_SETSIZE.  Do this at your own risk, as things which
	  still use select(), i.e., Tcl, are likely to break.  Backported
	  from HEAD.

2004-11-05  Dossy Shiobara <dossy@panoptic.com>

	* nsd/sockcallback.c (1.12.2.3): Dereferencing cbPtr->nextPtr is
	  dangerous since cbPtr could have been freed.

2004-09-30  tag aolserver_v40_r9_b2

2004-09-30  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.13): BUMP: 4.0.9b

2004-09-30  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.12), nsd/tclhttp.c (1.16.2.5),
	  nsd/sockcallback.c (1.12.2.2): Implement
	  Ns_SockCancelCallbackEx() in order to correctly cancel actions in
	  the SockCallbackThread.  Fix for SF Bug #1037196.  Backported
	  from HEAD for 4.0.9.
