@@ -1,3 +1,10 @@
+2004-11-20  Dossy Shiobara <dossy@panoptic.com>
+
+	* nsd/tclsched.c (1.5.2.1): Option parsing needed to be more
+	  careful, leading to segfaults when a bad command like
+	  [ns_schedule_proc -thread -only] is executed.  Closes SF Bug
+	  #1068836.   Backport from HEAD.
+
 2004-11-19  Dossy Shiobara <dossy@panoptic.com>
 
 	* configure (1.15.2.8), configure.in (1.13.2.6): autoconf now
